--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ twox-hash = "1.6.0"
 rayon = "1.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+[dev-dependencies]
+tempfile = "3"
