--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ twox-hash = "1.6.0"
 rayon = "1.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+rustc-hash = "1.1"
 
 [dev-dependencies]
 tempfile = "3"
