--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 [dependencies]
 walkdir = "2.3.2"
 indicatif = "0.17.3"
-twox-hash = "1.6.0"
 rayon = "1.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rustc-hash = "1.1"
+opencv = { version = "0.97", default-features = false, features = ["imgcodecs", "imgproc"] }
 
 [dev-dependencies]
 tempfile = "3"
