✨ feat(core, cli, env): Refactor project structure and enhance duplicate detection capabilities
- Introduce `camden-core` library for core duplicate detection logic, separating it from the CLI
- Update `.envrc.example` and `taskfile.yaml` for improved environment configuration and task management
- Modify `Cargo.toml` to reflect new workspace structure and dependencies
- Implement foundational modules for scanning, reporting, and operations within the core library
- Enhance CLI to utilize the new core library, improving command handling and functionality
- Add a detailed project plan in `PLAN.md` outlining future development phases and goals
- Refactor existing code for better organization and maintainability, including tests for new features

--- a/.envrc.example
+++ b/.envrc.example
@@ -1,4 +1,7 @@
-export OPENCV_LINK_PATHS="D:/vcpkg/installed/x64-windows-static-md/lib/"
+# Copy this file to `.envrc`, adjust the absolute paths if your vcpkg
+# installation lives elsewhere, and run `direnv allow` before invoking
+# any `task` commands.
+export OPENCV_LINK_PATHS="D:/vcpkg/installed/x64-windows-static-md/lib"
 export OPENCV_DIR="D:/vcpkg/installed/x64-windows-static-md"
 export VCPKGRS_TRIPLET="x64-windows-static-md"
 export VCPKGRS_DYNAMIC="0"
