--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,14 @@
+[workspace]
+members = [
+    ".",
+    "core",
+]
+
 [package]
 name = "camden"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-walkdir = "2.3.2"
+camden-core = { path = "core" }
 indicatif = "0.17.3"
-rayon = "1.5"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-rustc-hash = "1.1"
-opencv = { version = "0.97", default-features = false, features = ["imgcodecs", "imgproc"] }
-
-[dev-dependencies]
-tempfile = "3"
