--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -13,6 +13,7 @@ serde_json = "1.0"
 walkdir = "2.3.2"
 kamadak_exif = { package = "kamadak-exif", version = "0.5" }
 time = { version = "0.3", features = ["formatting"] }
+dirs = "5"
 
 [dev-dependencies]
 tempfile = "3"
