--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -14,6 +14,11 @@ walkdir = "2.3.2"
 kamadak_exif = { package = "kamadak-exif", version = "0.5" }
 time = { version = "0.3", features = ["formatting"] }
 dirs = "5"
+crossbeam-channel = { version = "0.5", optional = true }
+jwalk = { version = "0.8", optional = true }
+
+[features]
+experimental-threading = ["dep:crossbeam-channel", "dep:jwalk"]
 
 [dev-dependencies]
 tempfile = "3"
