✨ feat(core, frontend, taskfile): Enhance image processing and UI features
- Update AGENTS.md to reflect new command structure and dependencies
- Refactor taskfile.yaml to prioritize task commands over raw cargo commands for better environment management
- Introduce resolution tier classification for images, enabling low-resolution detection and tagging
- Implement GUID-based file renaming functionality to improve file management
- Enhance frontend UI with options for renaming files and detecting low-resolution images
- Update core modules to support new resolution tier logic and integrate with scanning functionality
- Add tests for new features to ensure reliability and correctness

--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -51,16 +51,36 @@ tasks:
         cd .vendor/vcpkg && ./vcpkg install opencv:x64-windows-static
 
   check:
+    silent: true
     cmds:
-      - cargo check --workspace --all-targets
+      - |
+        export VCPKG_ROOT="$PWD\\.vendor\\vcpkg"
+        # Unset dynamic linking vars to avoid conflicts
+        unset OPENCV_LINK_PATHS
+        unset OPENCV_LINK_LIBS
+        unset OPENCV_INCLUDE_PATHS
+        
+        # Ensure static CRT is used if vcpkg's triplet expects it (x64-windows-static usually does)
+        # We can pass rustflags via environment variable
+        export RUSTFLAGS="-C target-feature=+crt-static"
+
+        cargo check --workspace --all-targets
 
   fmt:
     cmds:
       - cargo fmt --all
 
   test:
+    silent: true
     cmds:
-      - cargo test --workspace --all-targets
+      - |
+        export VCPKG_ROOT="$PWD\\.vendor\\vcpkg"
+        unset OPENCV_LINK_PATHS
+        unset OPENCV_LINK_LIBS
+        unset OPENCV_INCLUDE_PATHS
+        export RUSTFLAGS="-C target-feature=+crt-static"
+        
+        cargo test --workspace --all-targets
 
   frontend:
     desc: Run the Slint frontend application
