--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -12,6 +12,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 walkdir = "2.3.2"
 kamadak_exif = { package = "kamadak-exif", version = "0.5" }
+uuid = { version = "1.0", features = ["v4"] }
+regex = "1"
+once_cell = "1"
 time = { version = "0.3", features = ["formatting"] }
 dirs = "5"
 crossbeam-channel = { version = "0.5", optional = true }
