--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -20,8 +20,16 @@ dirs = "5"
 crossbeam-channel = { version = "0.5", optional = true }
 jwalk = { version = "0.8", optional = true }
 
+# AI Classification dependencies
+# Using load-dynamic to avoid CRT conflicts with static OpenCV
+ort = { version = "2.0.0-rc.10", default-features = false, features = ["load-dynamic", "ndarray"], optional = true }
+ndarray = { version = "0.16", optional = true }
+toml = { version = "0.8", optional = true }
+
 [features]
+default = ["classification"]
 experimental-threading = ["dep:crossbeam-channel", "dep:jwalk"]
+classification = ["dep:ort", "dep:ndarray", "dep:toml"]
 
 [dev-dependencies]
 tempfile = "3"
