--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -19,6 +19,7 @@ time = { version = "0.3", features = ["formatting"] }
 dirs = "5"
 crossbeam-channel = { version = "0.5", optional = true }
 jwalk = { version = "0.8", optional = true }
+csv = "1.2"
 
 # AI Classification dependencies
 # Using load-dynamic to avoid CRT conflicts with static OpenCV
