--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -38,8 +38,9 @@ tasks:
         fi
 
   deps-models:
+    deps: [ deps-onnxruntime ]
     silent: true
-    desc: Download default AI classification models to .vendor/models
+    desc: Download AI classification models to .vendor/models
     cmds:
       - |
         if [ -d ".vendor/models" ]; then
@@ -74,6 +75,8 @@ tasks:
         echo "  - nsfw-inception-v3.onnx   (moderation)"
         echo ""
         echo "For additional models, run: task deps-models-extra"
+      - task: deps-models-extra
+      - task: deps-models-hf
 
   deps-models-extra:
     silent: true
@@ -114,66 +117,159 @@ tasks:
     cmds:
       - |
         mkdir -p .vendor/models
-        
+
         echo "Downloading pre-converted ONNX models from Hugging Face..."
         echo ""
-        
+
         # ============ TAGGING MODELS ============
-        
-        # ViT-base-224 ImageNet from Xenova (pre-converted)
+
         if [ -f ".vendor/models/vit-base-224.onnx" ]; then
-          echo "[1/4] ViT-base-224 (tagging): already downloaded."
+          echo "[tagging] ViT-base-224 (ImageNet): already downloaded."
         else
-          echo "[1/4] Downloading ViT-base-224 from HuggingFace (~347MB)..."
+          echo "[tagging] Downloading ViT-base-224 (347MB)..."
           curl --ssl-no-revoke -L -o ".vendor/models/vit-base-224.onnx" \
             "https://huggingface.co/Xenova/vit-base-patch16-224/resolve/main/onnx/model.onnx"
         fi
-        
-        # ViT-base-224 quantized (smaller, faster)
+
         if [ -f ".vendor/models/vit-base-224-q8.onnx" ]; then
-          echo "[2/4] ViT-base-224 quantized (tagging): already downloaded."
+          echo "[tagging] ViT-base-224 quantized: already downloaded."
         else
-          echo "[2/4] Downloading ViT-base-224 quantized (~88MB)..."
+          echo "[tagging] Downloading ViT-base-224 quantized (88MB)..."
           curl --ssl-no-revoke -L -o ".vendor/models/vit-base-224-q8.onnx" \
             "https://huggingface.co/Xenova/vit-base-patch16-224/resolve/main/onnx/model_quantized.onnx"
         fi
-        
-        # ============ MODERATION MODELS ============
-        
-        # ONNX Community NSFW detector (5-class ViT, same classes as GantMan)
-        # Source: https://huggingface.co/onnx-community/nsfw-image-detector-ONNX
-        if [ -f ".vendor/models/onnx-community-nsfw.onnx" ]; then
-          echo "[3/4] ONNX Community NSFW (moderation): already downloaded."
+
+        if [ -f ".vendor/models/wd-tags.csv" ]; then
+          echo "[tagging] WD tag list already downloaded."
         else
-          echo "[3/4] Downloading ONNX Community NSFW ViT (~343MB)..."
+          echo "[tagging] Downloading WD tag list..."
+          curl --ssl-no-revoke -L -o ".vendor/models/wd-tags.csv" \
+            "https://huggingface.co/SmilingWolf/wd-vit-tagger-v3/resolve/main/selected_tags.csv"
+        fi
+
+        if [ -f ".vendor/models/wd-vit-tagger-v3.onnx" ]; then
+          echo "[tagging] WD ViT Tagger V3 already downloaded."
+        else
+          echo "[tagging] Downloading WD ViT Tagger V3..."
+          curl --ssl-no-revoke -L -o ".vendor/models/wd-vit-tagger-v3.onnx" \
+            "https://huggingface.co/SmilingWolf/wd-vit-tagger-v3/resolve/main/model.onnx"
+        fi
+
+        if [ -f ".vendor/models/wd-vit-large-tagger-v3.onnx" ]; then
+          echo "[tagging] WD ViT Large Tagger V3 already downloaded."
+        else
+          echo "[tagging] Downloading WD ViT Large Tagger V3..."
+          curl --ssl-no-revoke -L -o ".vendor/models/wd-vit-large-tagger-v3.onnx" \
+            "https://huggingface.co/SmilingWolf/wd-vit-large-tagger-v3/resolve/main/model.onnx"
+        fi
+
+        if [ -f ".vendor/models/wd-swinv2-tagger-v3.onnx" ]; then
+          echo "[tagging] WD SwinV2 Tagger V3 already downloaded."
+        else
+          echo "[tagging] Downloading WD SwinV2 Tagger V3..."
+          curl --ssl-no-revoke -L -o ".vendor/models/wd-swinv2-tagger-v3.onnx" \
+            "https://huggingface.co/SmilingWolf/wd-swinv2-tagger-v3/resolve/main/model.onnx"
+        fi
+
+        if [ -f ".vendor/models/wd-eva02-large-tagger-v3.onnx" ]; then
+          echo "[tagging] WD EVA02 Large Tagger V3 already downloaded."
+        else
+          echo "[tagging] Downloading WD EVA02 Large Tagger V3..."
+          curl --ssl-no-revoke -L -o ".vendor/models/wd-eva02-large-tagger-v3.onnx" \
+            "https://huggingface.co/SmilingWolf/wd-eva02-large-tagger-v3/resolve/main/model.onnx"
+        fi
+
+        if [ -f ".vendor/models/p1atdev-wd-swinv2-tagger-v3-hf.onnx" ]; then
+          echo "[tagging] p1atdev WD SwinV2 Tagger V3 already downloaded."
+        else
+          echo "[tagging] Downloading p1atdev WD SwinV2 Tagger V3 (quantized)..."
+          curl --ssl-no-revoke -L -o ".vendor/models/p1atdev-wd-swinv2-tagger-v3-hf.onnx" \
+            "https://huggingface.co/p1atdev/wd-swinv2-tagger-v3-hf/resolve/main/model_quantized.onnx"
+        fi
+
+        if [ -f ".vendor/models/convnextv2-large-1k-224.onnx" ]; then
+          echo "[tagging] ConvNeXtV2 Large already downloaded."
+        else
+          echo "[tagging] Downloading ConvNeXtV2 Large (224x224, ImageNet 1000-class, quantized)..."
+          curl --ssl-no-revoke -L -o ".vendor/models/convnextv2-large-1k-224.onnx" \
+            "https://huggingface.co/Xenova/convnextv2-large-1k-224/resolve/main/onnx/model_quantized.onnx"
+        fi
+
+        # ============ MODERATION MODELS ============
+
+        if [ -f ".vendor/models/onnx-community-nsfw.onnx" ]; then
+          echo "[moderation] ONNX Community NSFW ViT already downloaded."
+        else
+          echo "[moderation] Downloading ONNX Community NSFW ViT (343MB)..."
           curl --ssl-no-revoke -L -o ".vendor/models/onnx-community-nsfw.onnx" \
             "https://huggingface.co/onnx-community/nsfw-image-detector-ONNX/resolve/main/onnx/model.onnx"
         fi
-        
-        # DeepGHS NSFWJS model (5-class, smaller/faster)
-        # Source: https://huggingface.co/deepghs/imgutils-models
+
         if [ -f ".vendor/models/nsfwjs.onnx" ]; then
-          echo "[4/4] NSFWJS (moderation): already downloaded."
+          echo "[moderation] NSFWJS model already downloaded."
         else
-          echo "[4/4] Downloading NSFWJS model (~10MB)..."
+          echo "[moderation] Downloading NSFWJS model (10MB)..."
           curl --ssl-no-revoke -L -o ".vendor/models/nsfwjs.onnx" \
             "https://huggingface.co/deepghs/imgutils-models/resolve/main/nsfw/nsfwjs.onnx"
         fi
-        
+
+        if [ -f ".vendor/models/adamcodd-vit-base-nsfw.onnx" ]; then
+          echo "[moderation] AdamCodd ViT NSFW already downloaded."
+        else
+          echo "[moderation] Downloading AdamCodd ViT NSFW (384x384, nsfw/sfw)..."
+          curl --ssl-no-revoke -L -o ".vendor/models/adamcodd-vit-base-nsfw.onnx" \
+            "https://huggingface.co/AdamCodd/vit-base-nsfw-detector/resolve/main/onnx/model.onnx"
+        fi
+
+        if [ -f ".vendor/models/falconsai-nsfw.onnx" ]; then
+          echo "[moderation] Falconsai NSFW already downloaded."
+        else
+          echo "[moderation] Downloading Falconsai NSFW (224x224, normal/nsfw, 98% accuracy)..."
+          curl --ssl-no-revoke -L -o ".vendor/models/falconsai-nsfw.onnx" \
+            "https://huggingface.co/Falconsai/nsfw_image_detection/resolve/main/onnx/model.onnx"
+        fi
+
+        if [ -f ".vendor/models/spiele-nsfw.onnx" ]; then
+          echo "[moderation] spiele NSFW detector already downloaded."
+        else
+          echo "[moderation] Downloading spiele NSFW detector..."
+          curl --ssl-no-revoke -L -o ".vendor/models/spiele-nsfw.onnx" \
+            "https://huggingface.co/spiele/nsfw_image_detector-ONNX/resolve/main/onnx/model.onnx"
+        fi
+
+        if [ -f ".vendor/models/taufiqdp-mobilenetv4_conv_small.e2400_r224_in1k_nsfw_classifier.onnx" ]; then
+          echo "[moderation] TaufiqDP MobileNetV4 NSFW already downloaded."
+        else
+          echo "[moderation] Downloading TaufiqDP MobileNetV4 NSFW..."
+          curl --ssl-no-revoke -L -o ".vendor/models/taufiqdp-mobilenetv4_conv_small.e2400_r224_in1k_nsfw_classifier.onnx" \
+            "https://huggingface.co/taufiqdp/mobilenetv4_conv_small.e2400_r224_in1k_nsfw_classifier/resolve/main/onnx/model.onnx"
+        fi
+
         echo ""
         echo "HuggingFace models downloaded to .vendor/models/"
         echo ""
-        echo "Tagging models:"
-        echo "  - vit-base-224.onnx         (Vision Transformer, 347MB)"
-        echo "  - vit-base-224-q8.onnx      (Vision Transformer quantized, 88MB)"
+        echo "Tagging models downloaded:"
+        echo "  - vit-base-224.onnx"
+        echo "  - vit-base-224-q8.onnx"
+        echo "  - wd-vit-tagger-v3.onnx"
+        echo "  - wd-vit-large-tagger-v3.onnx"
+        echo "  - wd-swinv2-tagger-v3.onnx"
+        echo "  - wd-eva02-large-tagger-v3.onnx"
+        echo "  - p1atdev-wd-swinv2-tagger-v3-hf.onnx"
+        echo "  - convnextv2-large-1k-224.onnx (Xenova)"
+        echo "  - wd-tags.csv (tag list)"
         echo ""
-        echo "Moderation models:"
-        echo "  - onnx-community-nsfw.onnx  (ViT 5-class, 343MB, high accuracy)"
-        echo "  - nsfwjs.onnx               (MobileNet 5-class, 10MB, fast)"
+        echo "Moderation models downloaded:"
+        echo "  - onnx-community-nsfw.onnx"
+        echo "  - nsfwjs.onnx"
+        echo "  - adamcodd-vit-base-nsfw.onnx (AdamCodd)"
+        echo "  - falconsai-nsfw.onnx (Falconsai)"
+        echo "  - spiele-nsfw.onnx"
+        echo "  - taufiqdp-mobilenetv4_conv_small.e2400_r224_in1k_nsfw_classifier.onnx"
         echo ""
-        echo "To use, update camden-classifier.toml:"
-        echo "  active_moderation = \"onnx-community-nsfw\"  # or \"nsfwjs\""
-        echo "  active_tagging = \"vit-base-224\""
+        echo "To use these models, update camden-classifier.toml:"
+        echo "  active_tagging = \"convnextv2-large\"  # or \"wd-vit-tagger-v3\""
+        echo "  active_moderation = \"adamcodd-vit-nsfw\"  # or \"falconsai-nsfw\""
 
   convert-hf-model:
     desc: Convert a HuggingFace model to ONNX (requires Python + torch)
@@ -211,24 +307,31 @@ tasks:
         fi
 
   install-vcpkg:
+    silent: true
     cmds:
       - |
-        if [ -d ".vendor/vcpkg" ]; then
-          echo "vcpkg is already installed."
-        else
-          echo "Cloning vcpkg..."
-          mkdir -p .vendor
-          git clone https://github.com/microsoft/vcpkg .vendor/vcpkg
-          echo "Bootstrapping vcpkg..."
-          cd .vendor/vcpkg && ./bootstrap-vcpkg.bat
+        if ! command -v "vcpkg" >/dev/null; then
+          if [ -d ".vendor/vcpkg" ]; then
+            echo "vcpkg is already installed."
+          else
+            echo "Cloning vcpkg..."
+            mkdir -p .vendor
+            git clone https://github.com/microsoft/vcpkg .vendor/vcpkg
+            echo "Bootstrapping vcpkg..."
+            cd .vendor/vcpkg
+            pwsh -NoProfile -ExecutionPolicy Bypass -c "scripts\bootstrap.ps1"
+            cd ../..
+          fi
         fi
 
   install-opencv-static:
+    silent: true
+    dir: .vendor/vcpkg
     deps: [install-vcpkg]
     cmds:
       - |
         echo "Installing static OpenCV..."
-        cd .vendor/vcpkg && ./vcpkg install opencv:x64-windows-static
+        .\\vcpkg.exe install opencv:x64-windows-static
 
   check:
     silent: true
