--- a/camden-frontend/Cargo.toml
+++ b/camden-frontend/Cargo.toml
@@ -9,6 +9,8 @@ slint = { version = "1.5", features = ["renderer-software"] }
 indicatif = "0.17"
 dirs = "5"
 rfd = "0.14"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [build-dependencies]
 slint-build = "1.5"
