feat: enhance model configuration and ensemble capabilities
- Update `camden-classifier-ensemble.toml` to include detailed descriptions and recommended models for moderation and tagging ensembles.
- Introduce `camden-classifier-single.toml` for single model configurations, streamlining usage for common scenarios.
- Refactor model loading and configuration logic to support both single and ensemble modes, improving flexibility.
- Add comprehensive documentation for model registry and usage in `ModelRegistryRewrite.md`.
- Enhance taskfile with new dependencies for auxiliary files and model downloads, ensuring smooth setup for Phase 1 models.
- Implement new ensemble utilities for aggregating model predictions, improving accuracy in moderation and tagging tasks.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,5 @@
 [workspace]
-members = [
-    ".",
-    "camden-frontend",
-    "core",
-]
+members = [".", "camden-frontend", "core"]
 
 [package]
 name = "camden"
