--- a/camden-classifier-ensemble.toml
+++ b/camden-classifier-ensemble.toml
@@ -1,59 +1,95 @@
-# Camden Multi-Model Ensemble Configuration Example
+# Camden Multi-Model Ensemble Configuration
 #
-# This configuration demonstrates how to use multiple ONNX models for improved
-# content moderation accuracy through ensemble classification.
+# Phase 1 Ensemble: 3 moderation + 3 tagging models
+# Optimized for architectural diversity and accuracy
+# Total size: ~752MB (moderation) + ~1.05GB (tagging) = ~1.8GB
+#
+# Run `task deps-models-phase1` to download all Phase 1 models
 
 models_dir = ".vendor/models"
 ort_library = ".vendor/onnxruntime/lib/onnxruntime.dll"
 
-# ENSEMBLE MODE: Specify multiple moderation models
-# Results are aggregated using averaging by default
+# ============================================================================
+# PHASE 1 MODERATION ENSEMBLE (Recommended - 3 Best Models)
+# ============================================================================
+# Diverse architectures for robust NSFW detection:
+# - EVA02: High-resolution 4-tier severity classifier (331MB, 448x448)
+# - MobileNetV4: Ultra-fast 5-class detector (9.6MB, 224x224)
+# - NudeNet: Body part detection specialist (12MB, 320x320)
 moderation_models = [
-    "gantman-nsfw",          # 5-class baseline model (InceptionV3, 89MB)
-    "vladmandic-nudenet",    # Body part detection (12MB)
-    "adamcodd-vit-nsfw",     # ViT-based high accuracy (344MB)
+    "spiele-nsfw-image-detector", # EVA02, 448x448, 4-tier (high accuracy)
+    "taufiqdp-mobilenetv4-nsfw",  # MobileNetV4, 224x224, 5-class (ultra-fast)
+    "vladmandic-nudenet",         # NudeNet, 320x320, 12-class body parts
 ]
 
-# TAGGING ENSEMBLE MODE: Specify multiple tagging models
-# Tags from all models are merged and confidence scores averaged
+# ============================================================================
+# PHASE 1 TAGGING ENSEMBLE (Recommended - 3 Best Models)
+# ============================================================================
+# Complementary tagging models covering different scales:
+# - ConvNeXtV2: Comprehensive Danbooru tagger (9,999 tags, 371MB, 448x448)
+# - JoyTag: Focused Danbooru subset (3,472 tags, 350MB, 448x448)
+# - CL Tagger: Maximum coverage (42,163 tags across 6 categories, ~300MB, 448x448)
 tagging_models = [
-    "mobilenetv2",           # Lightweight ImageNet (1000 classes)
-    "vit-base-224-q8",       # Vision Transformer (quantized)
+    "smilingwolf-wd-v1-4-convnextv2-tagger-v2", # 9,999 Danbooru tags
+    "fancyfeast-joytag",                        # 3,472 Danbooru tags
+    "cella110n-cl-tagger",                      # 42,163 tags (6 categories)
 ]
 
-# OR use single models (backward compatible):
-# tagging_model = "mobilenetv2"
-# moderation_model = "gantman-nsfw"
+# ============================================================================
+# ALTERNATIVE CONFIGURATIONS
+# ============================================================================
 
-# Alternative ensemble configurations:
-#
-# Option 1: Lightweight (2 models, ~100MB) - Recommended ⭐
-# moderation_models = ["gantman-nsfw", "vladmandic-nudenet"]
-#
-# Option 2: Balanced (3 models, ~445MB)
+# Option 1: All 5 Phase 1 moderation models (~765MB total)
 # moderation_models = [
-#     "gantman-nsfw",
-#     "vladmandic-nudenet",
-#     "adamcodd-vit-nsfw",
-# ]
-#
-# Option 3: High-accuracy (4 models, ~545MB)
-# moderation_models = [
-#     "gantman-nsfw",
-#     "adamcodd-vit-nsfw",
-#     "vladmandic-nudenet",
-#     "spiele-nsfw",
-# ]
-#
-# Option 4: ViT-focused ensemble
-# moderation_models = [
-#     "adamcodd-vit-nsfw",
-#     "onnx-community-nsfw",
+#     "n4xtan-nsfw-classification",     # CLIP-based binary (normal/nsfw)
+#     "spiele-nsfw-image-detector",     # EVA02 4-tier
+#     "vladmandic-nudenet",              # Body part detection
+#     "deepghs-nudenet-onnx",            # YOLOv8-based detection
+#     "taufiqdp-mobilenetv4-nsfw",      # MobileNetV4 5-class
 # ]
 
-# How ensemble aggregation works:
-# - Average: Averages probability scores across all models (default)
-# - MaxTier: Uses the most restrictive tier from any model (most conservative)
+# Option 2: All 3 Phase 1 tagging models (~1.02GB total)
+# tagging_models = [
+#     "smilingwolf-wd-v1-4-convnextv2-tagger-v2",  # 9,999 tags
+#     "fancyfeast-joytag",                          # 3,472 tags
+#     "cella110n-cl-tagger",                        # 42,163 tags
+# ]
+
+# Option 3: Lightweight (2 models, ~22MB)
+# moderation_models = ["vladmandic-nudenet", "taufiqdp-mobilenetv4-nsfw"]
+# tagging_models = ["fancyfeast-joytag"]
+
+# ============================================================================
+# CROSS-PIPELINE USAGE (Dual-Purpose Models)
+# ============================================================================
+# Moderation models can be used in tagging pipelines and vice versa!
+# ModelType is just metadata - the system only cares about model specs.
+#
+# Example: Use body part detection in both pipelines
+# moderation_models = ["spiele-nsfw-image-detector", "vladmandic-nudenet"]
+# tagging_models = ["vladmandic-nudenet", "fancyfeast-joytag"]
+#                   ↑ Same model used in both pipelines!
+#
+# All moderation models have inline labels, making them usable for tagging.
+# Dual-purpose models marked with ★ in moderation.rs:
+#   - vladmandic-nudenet (12 body part classes)
+#   - deepghs-nudenet-onnx (12 body part classes, YOLOv8-based)
+
+# ============================================================================
+# SINGLE MODEL MODE (Backward Compatible)
+# ============================================================================
+# For simpler, faster operation, use single models instead:
+# moderation_model = "taufiqdp-mobilenetv4-nsfw"  # Fast 5-class detector (9.6MB)
+# tagging_model = "smilingwolf-wd-v1-4-convnextv2-tagger-v2"  # 9,999 tags (371MB)
+
+# ============================================================================
+# ENSEMBLE AGGREGATION STRATEGY
+# ============================================================================
+# How ensemble predictions are combined:
+# - Average (default): Averages probability scores across all models
+#   → Balanced predictions, smooths out individual model biases
+# - MaxTier: Uses the most restrictive classification from any model
+#   → More conservative, reduces false negatives
 #
 # The ensemble runs all models in parallel and combines their predictions
-# for more robust and accurate content moderation results.
+# for more robust and accurate results than any single model.
